--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,20 @@
 #gamecontainer {
   width: 2120px;
   position: relative;
+  height: auto;
+}
+
+#apple img {
+    position: absolute;
+    top: 0px;
+  margin-left: 1000px;
+  width: 70px;
+  height: 50px;
 }
 
 #tamaDiv {
   position: absolute;
-  padding-top: 500px;
+  padding-top: 970px;
 }
 
 #tamaDiv img {
